// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MyComponent should render Locked SettingsOverview 1`] = `
<SafeAreaViewComponent>
  <Gradient
    style={
      Object {
        "height": 44,
      }
    }
  />
  <ScrollViewMock
    style={
      Object {
        "backgroundColor": "#F4F5F6",
        "height": "100%",
        "position": "relative",
      }
    }
  >
    <Gradient
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 70.22887323943661,
            "justifyContent": "space-between",
            "padding": 16.854929577464787,
          },
        ]
      }
    >
      <View
        style={
          Array [
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <Icon
            name="user-o"
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "#FFFFFF",
                  "fontSize": 30.90070422535211,
                },
              ]
            }
            type="fontAwesome"
          />
          <FormattedText
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "#FFFFFF",
                "fontSize": 25.28239436619718,
                "marginLeft": 22.473239436619718,
              }
            }
          >
            Account
            : 
            
          </FormattedText>
        </View>
      </View>
    </Gradient>
    <RowRoute
      disabled={false}
      right={
        <Icon
          name="ios-lock"
          size={24}
          style={
            Object {
              "color": "#4A5157",
            }
          }
          type="ionIcons"
        />
      }
      routeFunction={[Function]}
    />
    <RowRoute
      disabled={true}
      leftText="Change Password"
      right={
        <Icon
          name="arrow-right"
          style={
            Object {
              "color": "#4A5157",
              "fontSize": 25.28239436619718,
            }
          }
          type="simpleIcons"
        />
      }
      routeFunction={[Function]}
    />
    <RowRoute
      disabled={true}
      leftText="Change PIN"
      right={
        <Icon
          name="arrow-right"
          style={
            Object {
              "color": "#4A5157",
              "fontSize": 25.28239436619718,
            }
          }
          type="simpleIcons"
        />
      }
      routeFunction={[Function]}
    />
    <RowRoute
      disabled={true}
      leftText="Setup 2 Factor"
      right={
        <Icon
          name="arrow-right"
          style={
            Object {
              "color": "#4A5157",
              "fontSize": 25.28239436619718,
            }
          }
          type="simpleIcons"
        />
      }
      routeFunction={[Function]}
    />
    <RowRoute
      disabled={true}
      leftText="Set Up Password Recovery"
      right={
        <Icon
          name="arrow-right"
          style={
            Object {
              "color": "#4A5157",
              "fontSize": 25.28239436619718,
            }
          }
          type="simpleIcons"
        />
      }
      routeFunction={[Function]}
    />
    <Gradient
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 70.22887323943661,
            "justifyContent": "space-between",
            "padding": 16.854929577464787,
          },
        ]
      }
    >
      <View
        style={
          Array [
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <Icon
            name="ios-options"
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "#FFFFFF",
                  "fontSize": 30.90070422535211,
                },
              ]
            }
            type="ionIcons"
          />
          <FormattedText
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "#FFFFFF",
                "fontSize": 25.28239436619718,
                "marginLeft": 22.473239436619718,
              }
            }
          >
            Options
          </FormattedText>
        </View>
      </View>
    </Gradient>
    <View>
      <RowRoute
        disabled={false}
        leftText="Exchange Settings"
        right={
          <Icon
            name="arrow-right"
            style={
              Object {
                "color": "#4A5157",
                "fontSize": 25.28239436619718,
              }
            }
            type="simpleIcons"
          />
        }
        routeFunction={[Function]}
      />
      <RowRoute
        disabled={false}
        leftText="Spending Limits"
        right={
          <Icon
            name="arrow-right"
            style={
              Object {
                "color": "#4A5157",
                "fontSize": 25.28239436619718,
              }
            }
            type="simpleIcons"
          />
        }
        routeFunction={[Function]}
      />
      <RowModal
        leftText="Auto Log Off After"
        onPress={[Function]}
        rightText="DISABLE"
      />
      <RowRoute
        disabled={false}
        leftText="Default Currency"
        right={
          <Text>
            
          </Text>
        }
      />
      <RowSwitch
        leftText="PIN Re-login"
        onToggle={[Function]}
        value={false}
      />
      <RowRoute
        disabled={false}
        leftText="Bitcoin"
      />
      <RowRoute
        disabled={false}
        leftText="BitcoinCash"
      />
      <RowRoute
        disabled={false}
        leftText="Ethereum"
      />
      <RowRoute
        disabled={false}
        leftText="Dash"
      />
      <RowRoute
        disabled={false}
        leftText="Eos"
      />
      <RowRoute
        disabled={false}
        leftText="Litecoin"
      />
      <RowRoute
        disabled={false}
        leftText="Bitcoinsv"
      />
      <RowRoute
        disabled={false}
        leftText="Zcoin"
      />
      <RowRoute
        disabled={false}
        leftText="Digibyte"
      />
      <RowRoute
        disabled={false}
        leftText="Qtum"
      />
      <RowRoute
        disabled={false}
        leftText="Vertcoin"
      />
      <RowRoute
        disabled={false}
        leftText="Feathercoin"
      />
      <RowRoute
        disabled={false}
        leftText="BitcoinGold"
      />
      <RowRoute
        disabled={false}
        leftText="Smartcash"
      />
      <RowRoute
        disabled={false}
        leftText="Groestlcoin"
      />
      <RowRoute
        disabled={false}
        leftText="Ufo"
      />
      <RowRoute
        disabled={false}
        leftText="Send Logs"
        routeFunction={[Function]}
      />
      <RowModal
        leftText="Restore Wallets"
        onPress={[Function]}
        rightText=""
      />
      <RowRoute
        disabled={false}
        leftText="Terms of Service"
        scene="termsOfService"
      />
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#F4F5F6",
              "flex": 1,
              "padding": 28.091549295774648,
            },
          ]
        }
      >
        <PrimaryButton
          onPress={[Function]}
        >
          <Text>
            Enable Developer Mode
          </Text>
        </PrimaryButton>
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "height": 71.63345070422535,
          }
        }
      />
    </View>
  </ScrollViewMock>
</SafeAreaViewComponent>
`;

exports[`MyComponent should render UnLocked SettingsOverview 1`] = `
<SafeAreaViewComponent>
  <Gradient
    style={
      Object {
        "height": 44,
      }
    }
  />
  <ScrollViewMock
    style={
      Object {
        "backgroundColor": "#F4F5F6",
        "height": "100%",
        "position": "relative",
      }
    }
  >
    <Gradient
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 70.22887323943661,
            "justifyContent": "space-between",
            "padding": 16.854929577464787,
          },
        ]
      }
    >
      <View
        style={
          Array [
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <Icon
            name="user-o"
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "#FFFFFF",
                  "fontSize": 30.90070422535211,
                },
              ]
            }
            type="fontAwesome"
          />
          <FormattedText
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "#FFFFFF",
                "fontSize": 25.28239436619718,
                "marginLeft": 22.473239436619718,
              }
            }
          >
            Account
            : 
            
          </FormattedText>
        </View>
      </View>
    </Gradient>
    <RowRoute
      disabled={false}
      right={
        <Icon
          name="ios-unlock"
          size={24}
          style={
            Object {
              "color": "#4A5157",
            }
          }
          type="ionIcons"
        />
      }
      routeFunction={[Function]}
    />
    <RowRoute
      disabled={false}
      leftText="Change Password"
      right={
        <Icon
          name="arrow-right"
          style={
            Object {
              "color": "#4A5157",
              "fontSize": 25.28239436619718,
            }
          }
          type="simpleIcons"
        />
      }
      routeFunction={[Function]}
    />
    <RowRoute
      disabled={false}
      leftText="Change PIN"
      right={
        <Icon
          name="arrow-right"
          style={
            Object {
              "color": "#4A5157",
              "fontSize": 25.28239436619718,
            }
          }
          type="simpleIcons"
        />
      }
      routeFunction={[Function]}
    />
    <RowRoute
      disabled={false}
      leftText="Setup 2 Factor"
      right={
        <Icon
          name="arrow-right"
          style={
            Object {
              "color": "#4A5157",
              "fontSize": 25.28239436619718,
            }
          }
          type="simpleIcons"
        />
      }
      routeFunction={[Function]}
    />
    <RowRoute
      disabled={false}
      leftText="Set Up Password Recovery"
      right={
        <Icon
          name="arrow-right"
          style={
            Object {
              "color": "#4A5157",
              "fontSize": 25.28239436619718,
            }
          }
          type="simpleIcons"
        />
      }
      routeFunction={[Function]}
    />
    <Gradient
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 70.22887323943661,
            "justifyContent": "space-between",
            "padding": 16.854929577464787,
          },
        ]
      }
    >
      <View
        style={
          Array [
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <Icon
            name="ios-options"
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "#FFFFFF",
                  "fontSize": 30.90070422535211,
                },
              ]
            }
            type="ionIcons"
          />
          <FormattedText
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "#FFFFFF",
                "fontSize": 25.28239436619718,
                "marginLeft": 22.473239436619718,
              }
            }
          >
            Options
          </FormattedText>
        </View>
      </View>
    </Gradient>
    <View>
      <RowRoute
        disabled={false}
        leftText="Exchange Settings"
        right={
          <Icon
            name="arrow-right"
            style={
              Object {
                "color": "#4A5157",
                "fontSize": 25.28239436619718,
              }
            }
            type="simpleIcons"
          />
        }
        routeFunction={[Function]}
      />
      <RowRoute
        disabled={false}
        leftText="Spending Limits"
        right={
          <Icon
            name="arrow-right"
            style={
              Object {
                "color": "#4A5157",
                "fontSize": 25.28239436619718,
              }
            }
            type="simpleIcons"
          />
        }
        routeFunction={[Function]}
      />
      <RowModal
        leftText="Auto Log Off After"
        onPress={[Function]}
        rightText="DISABLE"
      />
      <RowRoute
        disabled={false}
        leftText="Default Currency"
        right={
          <Text>
            
          </Text>
        }
      />
      <RowSwitch
        leftText="PIN Re-login"
        onToggle={[Function]}
        value={false}
      />
      <RowRoute
        disabled={false}
        leftText="Bitcoin"
      />
      <RowRoute
        disabled={false}
        leftText="BitcoinCash"
      />
      <RowRoute
        disabled={false}
        leftText="Ethereum"
      />
      <RowRoute
        disabled={false}
        leftText="Dash"
      />
      <RowRoute
        disabled={false}
        leftText="Eos"
      />
      <RowRoute
        disabled={false}
        leftText="Litecoin"
      />
      <RowRoute
        disabled={false}
        leftText="Bitcoinsv"
      />
      <RowRoute
        disabled={false}
        leftText="Zcoin"
      />
      <RowRoute
        disabled={false}
        leftText="Digibyte"
      />
      <RowRoute
        disabled={false}
        leftText="Qtum"
      />
      <RowRoute
        disabled={false}
        leftText="Vertcoin"
      />
      <RowRoute
        disabled={false}
        leftText="Feathercoin"
      />
      <RowRoute
        disabled={false}
        leftText="BitcoinGold"
      />
      <RowRoute
        disabled={false}
        leftText="Smartcash"
      />
      <RowRoute
        disabled={false}
        leftText="Groestlcoin"
      />
      <RowRoute
        disabled={false}
        leftText="Ufo"
      />
      <RowRoute
        disabled={false}
        leftText="Send Logs"
        routeFunction={[Function]}
      />
      <RowModal
        leftText="Restore Wallets"
        onPress={[Function]}
        rightText=""
      />
      <RowRoute
        disabled={false}
        leftText="Terms of Service"
        scene="termsOfService"
      />
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#F4F5F6",
              "flex": 1,
              "padding": 28.091549295774648,
            },
          ]
        }
      >
        <PrimaryButton
          onPress={[Function]}
        >
          <Text>
            Enable Developer Mode
          </Text>
        </PrimaryButton>
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "height": 71.63345070422535,
          }
        }
      />
    </View>
  </ScrollViewMock>
</SafeAreaViewComponent>
`;
